--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "astro dev",
+		"dev": "bunx --bun astro dev",
 		"build": "astro build",
 		"preview": "astro build && wrangler dev",
 		"astro": "astro",
