--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"astro": "^5.16.5"
 	},
 	"devDependencies": {
+		"@types/bun": "^1.3.4",
 		"@types/node": "^25.0.1",
 		"wrangler": "^4.54.0"
 	}
