--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.6.12",
-		"astro": "^5.16.5"
+		"@fontsource/iosevka": "^5.2.5",
+		"@tailwindcss/vite": "^4.1.18",
+		"astro": "^5.16.5",
+		"tailwindcss": "^4.1.18"
 	},
 	"devDependencies": {
 		"@types/bun": "^1.3.4",
 		"@types/node": "^25.0.1",
+		"daisyui": "^5.5.13",
 		"wrangler": "^4.54.0"
 	}
 }
