--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.6.12",
+		"@astrojs/react": "^4.4.2",
 		"@fontsource/iosevka": "^5.2.5",
 		"@tailwindcss/vite": "^4.1.18",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
 		"astro": "^5.16.5",
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3",
 		"tailwindcss": "^4.1.18"
 	},
 	"devDependencies": {
