chore: update VSCode settings and extensions for Tailwind CSS and DaisyUI support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
 	"files.associations": {
-		"wrangler.json": "jsonc"
+		"wrangler.json": "jsonc",
+		"*.css": "tailwindcss"
+	},
+	"css.validate": false,
+	"less.validate": false,
+	"scss.validate": false,
+	"tailwindCSS.includeLanguages": {
+		"css": "CSS"
+	},
+	"editor.quickSuggestions": {
+		"strings": true
 	}
 }
