--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
 		"tailwindcss": "^4.1.18"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "2.3.8",
 		"@types/bun": "^1.3.4",
 		"@types/node": "^25.0.1",
 		"daisyui": "^5.5.13",
+		"ultracite": "6.4.0",
 		"wrangler": "^4.54.0"
 	}
 }
