--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "node"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "strictNullChecks": true
   }
 }
