--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,10 +7,7 @@
 	"name": "firstfly",
 	"main": "./dist/_worker.js/index.js",
 	"compatibility_date": "2025-12-12",
-	"compatibility_flags": [
-		"nodejs_compat",
-		"global_fetch_strictly_public"
-	],
+	"compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
 	"assets": {
 		"binding": "ASSETS",
 		"directory": "./dist"
