--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"preview": "astro build && wrangler dev",
 		"astro": "astro",
 		"deploy": "astro build && wrangler deploy",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"check": "ultracite check",
+		"fix": "ultracite fix"
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.6.12",
@@ -20,7 +22,8 @@
 		"astro": "^5.16.5",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
-		"tailwindcss": "^4.1.18"
+		"tailwindcss": "^4.1.18",
+		"typed.js": "^2.0.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
