--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
+		"@commitlint/cli": "^20.2.0",
+		"@commitlint/config-conventional": "^20.2.0",
 		"@types/bun": "^1.3.4",
 		"@types/node": "^25.0.1",
 		"daisyui": "^5.5.13",
