--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/bun": "^1.3.4",
 		"@types/node": "^25.0.1",
 		"daisyui": "^5.5.13",
+		"lefthook": "^2.0.12",
 		"ultracite": "6.4.0",
 		"wrangler": "^4.54.0"
 	}
