--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
 		"tailwindcss": "^4.1.18",
-		"typed.js": "^2.0.12"
+		"typed.js": "^2.1.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
 		"@commitlint/cli": "^20.2.0",
 		"@commitlint/config-conventional": "^20.2.0",
 		"@types/bun": "^1.3.4",
-		"@types/node": "^25.0.1",
-		"daisyui": "^5.5.13",
+		"@types/node": "^25.0.2",
+		"daisyui": "^5.5.14",
 		"lefthook": "^2.0.12",
-		"ultracite": "6.4.0",
+		"ultracite": "^6.4.1",
 		"wrangler": "^4.54.0"
 	}
 }
