--- a/biome.json
+++ b/biome.json
@@ -20,7 +20,7 @@
     "lineWidth": 100
   },
   "linter": {
-    "enabled": true,
+    "enabled": false,
     "rules": {
       "recommended": true,
       "style": {
