style: format JSON and configuration files for consistency

--- a/biome.json
+++ b/biome.json
@@ -5,50 +5,12 @@
     "clientKind": "git",
     "useIgnoreFile": true
   },
-  "files": {
-    "includes": [
-      "**",
-      "!!**/dist",
-      "!!**/bun.lock",
-      "!!worker-configuration.d.ts"
-    ]
-  },
-  "formatter": {
-    "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 2,
-    "lineWidth": 100
-  },
+  "files": {},
   "linter": {
-    "enabled": false,
     "rules": {
-      "recommended": true,
       "style": {
-        "noNamespace": "off"
-      }
-    }
-  },
-  "javascript": {
-    "formatter": {
-      "quoteStyle": "double",
-      "lineWidth": 100
-    }
-  },
-  "json": {
-    "formatter": {
-      "enabled": false
-    }
-  },
-  "css": {
-    "parser": {
-      "tailwindDirectives": true
-    }
-  },
-  "assist": {
-    "enabled": true,
-    "actions": {
-      "source": {
-        "organizeImports": "on"
+        "noNamespace": "off",
+        "useFilenamingConvention": "off"
       }
     }
   },
@@ -63,9 +25,5 @@
       }
     }
   ],
-  "extends": [
-    "ultracite/core",
-    "ultracite/astro",
-    "ultracite/react"
-  ]
+  "extends": ["ultracite/core", "ultracite/astro", "ultracite/react"]
 }
