--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "preview": "astro build && wrangler dev",
     "astro": "astro",
     "deploy": "astro build && wrangler deploy",
-    "cf-typegen": "wrangler types",
-    "check": "ultracite check",
-    "fix": "ultracite fix"
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
@@ -28,14 +26,12 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.8",
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
     "@types/bun": "^1.3.4",
     "@types/node": "^25.0.2",
     "daisyui": "^5.5.14",
     "lefthook": "^2.0.12",
-    "ultracite": "^6.4.1",
     "wrangler": "^4.54.0"
   }
 }
