--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "astro build && wrangler dev",
     "astro": "astro",
     "deploy": "astro build && wrangler deploy",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
@@ -32,6 +33,9 @@
     "@types/node": "^25.0.2",
     "daisyui": "^5.5.14",
     "lefthook": "^2.0.12",
+    "prettier": "^3.7.4",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "wrangler": "^4.54.0"
   }
 }
