--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,34 @@
 {
+  "$schema": "https://json.schemastore.org/prettierrc",
+
   "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+
+  "semi": true,
+  "singleQuote": true,
+  "quoteProps": "as-needed",
+
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+
+  "arrowParens": "always",
+
+  "endOfLine": "lf",
+
+  "jsxSingleQuote": false,
+
+  "htmlWhitespaceSensitivity": "css",
+
+  "proseWrap": "preserve",
+
   "overrides": [
     {
       "files": "*.astro",
-
-      "options": {
-        "parser": "astro"
-      }
+      "options": { "parser": "astro" }
     }
   ]
 }
