--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "astro": "astro",
     "deploy": "astro build && wrangler deploy",
     "cf-typegen": "wrangler types",
-    "format": "prettier --write ."
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
@@ -31,11 +34,19 @@
     "@commitlint/config-conventional": "^20.2.0",
     "@types/bun": "^1.3.4",
     "@types/node": "^25.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
+    "astro-eslint-parser": "^1.2.2",
     "daisyui": "^5.5.14",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-astro": "^1.5.0",
     "lefthook": "^2.0.12",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.50.0",
     "wrangler": "^4.54.0"
   }
 }
