--- a/package.json
+++ b/package.json
@@ -42,11 +42,17 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
     "lefthook": "^2.0.12",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
     "wrangler": "^4.54.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": "eslint --fix",
+    "*.astro": "prettier --write",
+    "*.{json,css,md}": "prettier --write"
   }
 }
