--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.5",
+    "astro-typewriter": "^1.1.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.18",
-    "typed.js": "^2.1.0"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
