feat: add files associations for css to tailwindcss
This avoid "UnknownAtRule" warning for Tailwind valid directives.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,19 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "prettier.documentSelectors": ["**/*.astro"],
+  "prettier.documentSelectors": [
+    "**/*.astro"
+  ],
   "[astro]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "eslint.validate": ["javascript", "typescript", "astro", "html"]
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "astro",
+    "html"
+  ],
+  "files.associations": {
+    "*.css": "tailwindcss"
+  }
 }
