--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "cf-typegen": "wrangler types",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint 'src/**/*.{js,ts,jsx,tsx,astro}'",
+    "lint:fix": "eslint 'src/**/*.{js,ts,jsx,tsx,astro}' --fix"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
@@ -22,7 +22,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "astro": "^5.16.5",
+    "astro": "^5.16.6",
     "astro-typewriter": "^1.1.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
@@ -33,7 +33,7 @@
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
     "@types/bun": "^1.3.4",
-    "@types/node": "^25.0.2",
+    "@types/node": "^25.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
     "astro-eslint-parser": "^1.2.2",
@@ -48,11 +48,11 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
-    "wrangler": "^4.54.0"
+    "wrangler": "^4.55.0"
   },
   "lint-staged": {
-    "*.{js,ts,jsx,tsx}": "eslint --fix",
-    "*.astro": "prettier --write",
+    "*.{js,ts,jsx,tsx,astro}": "eslint --fix",
+    ".": "prettier --write",
     "*.{json,css,md}": "prettier --write"
   }
 }
