feat: add hono api

--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "bunx --bun astro dev",
+    "client": "bunx --bun astro dev",
     "build": "bunx --bun astro build",
     "preview": "astro build && wrangler dev",
     "astro": "astro",
+    "worker": "wrangler dev",
     "deploy": "astro build && wrangler deploy",
-    "cf-typegen": "wrangler types",
+    "typegen": "wrangler types",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint": "eslint 'src/**/*.{js,ts,jsx,tsx,astro}'",
-    "lint:fix": "eslint 'src/**/*.{js,ts,jsx,tsx,astro}' --fix"
+    "lint:fix": "eslint 'src/**/*.{js,ts,jsx,tsx,astro}' --fix",
+    "dev": "concurrently \"bun run client\" \"bun run worker\""
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
@@ -24,6 +26,8 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6",
     "astro-typewriter": "^1.1.0",
+    "concurrently": "^9.2.1",
+    "hono": "^4.11.1",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -48,7 +52,7 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
-    "wrangler": "^4.55.0"
+    "wrangler": "^4.56.0"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx,astro}": "eslint --fix",
