--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,13 +5,17 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "firstfly",
-  "main": "./dist/_worker.js/index.js",
-  "compatibility_date": "2025-12-12",
-  "compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
-  "assets": {
-    "binding": "ASSETS",
-    "directory": "./dist",
-  },
+  // "main": "./dist/_worker.js/index.js",
+  "main": "./src/server/index.ts",
+  "compatibility_date": "2025-12-18",
+  "compatibility_flags": [
+    "nodejs_compat",
+    "global_fetch_strictly_public"
+  ],
+  // "assets": {
+  //   "binding": "ASSETS",
+  //   "directory": "./dist",
+  // },
   "observability": {
     "enabled": true,
   },
