feat: deploy staging environment

--- a/.prettierrc
+++ b/.prettierrc
@@ -29,6 +29,10 @@
     {
       "files": "*.astro",
       "options": { "parser": "astro" }
+    },
+    {
+      "files": "*.jsonc",
+      "options": { "parser": "jsonc", "trailingComma": "none" }
     }
   ]
 }
