--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "0.0.1",
   "scripts": {
     "client": "bunx --bun astro dev",
-    "build": "bunx --bun astro build",
+    "build:client": "bunx --bun astro build",
     "preview": "astro build && wrangler dev",
     "astro": "astro",
     "worker": "wrangler dev",
     "deploy": "astro build && wrangler deploy",
+    "dryrun:staging": "bun run build:client && wrangler deploy --dry-run --env staging",
+    "dryrun:prod": "bun run build:client && wrangler deploy --dry-run --env production",
+    "deploy:staging": "bun run build:client && wrangler deploy --env staging",
+    "deploy:prod": "bun run build:client && wrangler deploy --env production",
     "typegen": "wrangler types",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
@@ -22,12 +26,12 @@
     "@fontsource/iosevka": "^5.2.5",
     "@lucide/astro": "^0.561.0",
     "@tailwindcss/vite": "^4.1.18",
-    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.6",
     "astro-typewriter": "^1.1.0",
     "concurrently": "^9.2.1",
     "hono": "^4.11.1",
+    "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -38,6 +42,7 @@
     "@commitlint/config-conventional": "^20.2.0",
     "@types/bun": "^1.3.4",
     "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
     "astro-eslint-parser": "^1.2.2",
