--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "astro": "^5.16.6",
     "astro-typewriter": "^1.1.0",
     "concurrently": "^9.2.1",
+    "drizzle-orm": "^0.45.1",
     "hono": "^4.11.1",
     "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
@@ -43,10 +44,11 @@
     "@types/bun": "^1.3.5",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
-    "@typescript-eslint/eslint-plugin": "^8.50.0",
-    "@typescript-eslint/parser": "^8.50.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
     "astro-eslint-parser": "^1.2.2",
     "daisyui": "^5.5.14",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
@@ -56,7 +58,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.0",
+    "typescript-eslint": "^8.50.1",
     "wrangler": "^4.56.0"
   },
   "lint-staged": {
