--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "format:fix": "prettier --write .",
     "lint": "eslint 'src/**/*.{js,ts,jsx,tsx,astro}'",
     "lint:fix": "eslint 'src/**/*.{js,ts,jsx,tsx,astro}' --fix",
-    "dev": "concurrently \"bun run client\" \"bun run worker\""
+    "dev": "concurrently \"bun run client\" \"bun run worker\"",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate:local": "wrangler d1 migrations apply firstfly-local-db --local",
+    "db:migrate:staging": "wrangler d1 migrations apply firstfly-staging-db --remote --env staging",
+    "db:migrate:prod": "wrangler d1 migrations apply firstfly-prod-db --remote --env production"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
@@ -39,6 +43,7 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251224.0",
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
     "@types/bun": "^1.3.5",
