--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,18 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
+  "include": [
+    ".astro/types.d.ts",
+    "**/*"
+  ],
+  "exclude": [
+    "dist"
+  ],
   "compilerOptions": {
-    "types": ["./worker-configuration.d.ts", "node"],
+    "types": [
+      "./worker-configuration.d.ts",
+      "node",
+      "bun-types"
+    ],
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "strictNullChecks": true
